parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expression PLUS term
Rule 2     expression -> expression MINUS term
Rule 3     expression -> term
Rule 4     term -> term TIMES factor
Rule 5     term -> term DIVIDE factor
Rule 6     term -> factor
Rule 7     factor -> NUMBER
Rule 8     factor -> LPAREN expression RPAREN
Rule 9     factor -> SENO LPAREN expression RPAREN
Rule 10    factor -> COSENO LPAREN expression RPAREN
Rule 11    factor -> RAIZ LPAREN expression RPAREN

Terminals, with rules where they appear

COSENO               : 10
DIVIDE               : 5
LPAREN               : 8 9 10 11
MINUS                : 2
NUMBER               : 7
PLUS                 : 1
RAIZ                 : 11
RPAREN               : 8 9 10 11
SENO                 : 9
TIMES                : 4
error                : 

Nonterminals, with rules where they appear

expression           : 1 2 8 9 10 11 0
factor               : 4 5 6
term                 : 1 2 3 4 5

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . SENO LPAREN expression RPAREN
    (10) factor -> . COSENO LPAREN expression RPAREN
    (11) factor -> . RAIZ LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5
    SENO            shift and go to state 6
    COSENO          shift and go to state 7
    RAIZ            shift and go to state 8

    expression                     shift and go to state 1
    term                           shift and go to state 2
    factor                         shift and go to state 3

state 1

    (0) S' -> expression .
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    PLUS            shift and go to state 9
    MINUS           shift and go to state 10


state 2

    (3) expression -> term .
    (4) term -> term . TIMES factor
    (5) term -> term . DIVIDE factor

    PLUS            reduce using rule 3 (expression -> term .)
    MINUS           reduce using rule 3 (expression -> term .)
    $end            reduce using rule 3 (expression -> term .)
    RPAREN          reduce using rule 3 (expression -> term .)
    TIMES           shift and go to state 11
    DIVIDE          shift and go to state 12


state 3

    (6) term -> factor .

    TIMES           reduce using rule 6 (term -> factor .)
    DIVIDE          reduce using rule 6 (term -> factor .)
    PLUS            reduce using rule 6 (term -> factor .)
    MINUS           reduce using rule 6 (term -> factor .)
    $end            reduce using rule 6 (term -> factor .)
    RPAREN          reduce using rule 6 (term -> factor .)


state 4

    (7) factor -> NUMBER .

    TIMES           reduce using rule 7 (factor -> NUMBER .)
    DIVIDE          reduce using rule 7 (factor -> NUMBER .)
    PLUS            reduce using rule 7 (factor -> NUMBER .)
    MINUS           reduce using rule 7 (factor -> NUMBER .)
    $end            reduce using rule 7 (factor -> NUMBER .)
    RPAREN          reduce using rule 7 (factor -> NUMBER .)


state 5

    (8) factor -> LPAREN . expression RPAREN
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . SENO LPAREN expression RPAREN
    (10) factor -> . COSENO LPAREN expression RPAREN
    (11) factor -> . RAIZ LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5
    SENO            shift and go to state 6
    COSENO          shift and go to state 7
    RAIZ            shift and go to state 8

    expression                     shift and go to state 13
    term                           shift and go to state 2
    factor                         shift and go to state 3

state 6

    (9) factor -> SENO . LPAREN expression RPAREN

    LPAREN          shift and go to state 14


state 7

    (10) factor -> COSENO . LPAREN expression RPAREN

    LPAREN          shift and go to state 15


state 8

    (11) factor -> RAIZ . LPAREN expression RPAREN

    LPAREN          shift and go to state 16


state 9

    (1) expression -> expression PLUS . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . SENO LPAREN expression RPAREN
    (10) factor -> . COSENO LPAREN expression RPAREN
    (11) factor -> . RAIZ LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5
    SENO            shift and go to state 6
    COSENO          shift and go to state 7
    RAIZ            shift and go to state 8

    term                           shift and go to state 17
    factor                         shift and go to state 3

state 10

    (2) expression -> expression MINUS . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . SENO LPAREN expression RPAREN
    (10) factor -> . COSENO LPAREN expression RPAREN
    (11) factor -> . RAIZ LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5
    SENO            shift and go to state 6
    COSENO          shift and go to state 7
    RAIZ            shift and go to state 8

    term                           shift and go to state 18
    factor                         shift and go to state 3

state 11

    (4) term -> term TIMES . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . SENO LPAREN expression RPAREN
    (10) factor -> . COSENO LPAREN expression RPAREN
    (11) factor -> . RAIZ LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5
    SENO            shift and go to state 6
    COSENO          shift and go to state 7
    RAIZ            shift and go to state 8

    factor                         shift and go to state 19

state 12

    (5) term -> term DIVIDE . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . SENO LPAREN expression RPAREN
    (10) factor -> . COSENO LPAREN expression RPAREN
    (11) factor -> . RAIZ LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5
    SENO            shift and go to state 6
    COSENO          shift and go to state 7
    RAIZ            shift and go to state 8

    factor                         shift and go to state 20

state 13

    (8) factor -> LPAREN expression . RPAREN
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    RPAREN          shift and go to state 21
    PLUS            shift and go to state 9
    MINUS           shift and go to state 10


state 14

    (9) factor -> SENO LPAREN . expression RPAREN
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . SENO LPAREN expression RPAREN
    (10) factor -> . COSENO LPAREN expression RPAREN
    (11) factor -> . RAIZ LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5
    SENO            shift and go to state 6
    COSENO          shift and go to state 7
    RAIZ            shift and go to state 8

    expression                     shift and go to state 22
    term                           shift and go to state 2
    factor                         shift and go to state 3

state 15

    (10) factor -> COSENO LPAREN . expression RPAREN
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . SENO LPAREN expression RPAREN
    (10) factor -> . COSENO LPAREN expression RPAREN
    (11) factor -> . RAIZ LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5
    SENO            shift and go to state 6
    COSENO          shift and go to state 7
    RAIZ            shift and go to state 8

    expression                     shift and go to state 23
    term                           shift and go to state 2
    factor                         shift and go to state 3

state 16

    (11) factor -> RAIZ LPAREN . expression RPAREN
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . SENO LPAREN expression RPAREN
    (10) factor -> . COSENO LPAREN expression RPAREN
    (11) factor -> . RAIZ LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5
    SENO            shift and go to state 6
    COSENO          shift and go to state 7
    RAIZ            shift and go to state 8

    expression                     shift and go to state 24
    term                           shift and go to state 2
    factor                         shift and go to state 3

state 17

    (1) expression -> expression PLUS term .
    (4) term -> term . TIMES factor
    (5) term -> term . DIVIDE factor

    PLUS            reduce using rule 1 (expression -> expression PLUS term .)
    MINUS           reduce using rule 1 (expression -> expression PLUS term .)
    $end            reduce using rule 1 (expression -> expression PLUS term .)
    RPAREN          reduce using rule 1 (expression -> expression PLUS term .)
    TIMES           shift and go to state 11
    DIVIDE          shift and go to state 12


state 18

    (2) expression -> expression MINUS term .
    (4) term -> term . TIMES factor
    (5) term -> term . DIVIDE factor

    PLUS            reduce using rule 2 (expression -> expression MINUS term .)
    MINUS           reduce using rule 2 (expression -> expression MINUS term .)
    $end            reduce using rule 2 (expression -> expression MINUS term .)
    RPAREN          reduce using rule 2 (expression -> expression MINUS term .)
    TIMES           shift and go to state 11
    DIVIDE          shift and go to state 12


state 19

    (4) term -> term TIMES factor .

    TIMES           reduce using rule 4 (term -> term TIMES factor .)
    DIVIDE          reduce using rule 4 (term -> term TIMES factor .)
    PLUS            reduce using rule 4 (term -> term TIMES factor .)
    MINUS           reduce using rule 4 (term -> term TIMES factor .)
    $end            reduce using rule 4 (term -> term TIMES factor .)
    RPAREN          reduce using rule 4 (term -> term TIMES factor .)


state 20

    (5) term -> term DIVIDE factor .

    TIMES           reduce using rule 5 (term -> term DIVIDE factor .)
    DIVIDE          reduce using rule 5 (term -> term DIVIDE factor .)
    PLUS            reduce using rule 5 (term -> term DIVIDE factor .)
    MINUS           reduce using rule 5 (term -> term DIVIDE factor .)
    $end            reduce using rule 5 (term -> term DIVIDE factor .)
    RPAREN          reduce using rule 5 (term -> term DIVIDE factor .)


state 21

    (8) factor -> LPAREN expression RPAREN .

    TIMES           reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    PLUS            reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    MINUS           reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    $end            reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 8 (factor -> LPAREN expression RPAREN .)


state 22

    (9) factor -> SENO LPAREN expression . RPAREN
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    RPAREN          shift and go to state 25
    PLUS            shift and go to state 9
    MINUS           shift and go to state 10


state 23

    (10) factor -> COSENO LPAREN expression . RPAREN
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    RPAREN          shift and go to state 26
    PLUS            shift and go to state 9
    MINUS           shift and go to state 10


state 24

    (11) factor -> RAIZ LPAREN expression . RPAREN
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    RPAREN          shift and go to state 27
    PLUS            shift and go to state 9
    MINUS           shift and go to state 10


state 25

    (9) factor -> SENO LPAREN expression RPAREN .

    TIMES           reduce using rule 9 (factor -> SENO LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 9 (factor -> SENO LPAREN expression RPAREN .)
    PLUS            reduce using rule 9 (factor -> SENO LPAREN expression RPAREN .)
    MINUS           reduce using rule 9 (factor -> SENO LPAREN expression RPAREN .)
    $end            reduce using rule 9 (factor -> SENO LPAREN expression RPAREN .)
    RPAREN          reduce using rule 9 (factor -> SENO LPAREN expression RPAREN .)


state 26

    (10) factor -> COSENO LPAREN expression RPAREN .

    TIMES           reduce using rule 10 (factor -> COSENO LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 10 (factor -> COSENO LPAREN expression RPAREN .)
    PLUS            reduce using rule 10 (factor -> COSENO LPAREN expression RPAREN .)
    MINUS           reduce using rule 10 (factor -> COSENO LPAREN expression RPAREN .)
    $end            reduce using rule 10 (factor -> COSENO LPAREN expression RPAREN .)
    RPAREN          reduce using rule 10 (factor -> COSENO LPAREN expression RPAREN .)


state 27

    (11) factor -> RAIZ LPAREN expression RPAREN .

    TIMES           reduce using rule 11 (factor -> RAIZ LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 11 (factor -> RAIZ LPAREN expression RPAREN .)
    PLUS            reduce using rule 11 (factor -> RAIZ LPAREN expression RPAREN .)
    MINUS           reduce using rule 11 (factor -> RAIZ LPAREN expression RPAREN .)
    $end            reduce using rule 11 (factor -> RAIZ LPAREN expression RPAREN .)
    RPAREN          reduce using rule 11 (factor -> RAIZ LPAREN expression RPAREN .)

